--- a/CruzadinhaArqComp/index.html
+++ b/CruzadinhaArqComp/index.html
@@ -199,25 +199,25 @@ footer p{
         </div>
     </footer>
     <script>
-    var special_words = ['CPU', 'ULA', 'Registradores', 'RAM', 'ROM', 'EPROM', 'FLASH', 'Memória de Massa', 'DMA', 'CS', 'Adress Bus', 'Data Bus', 'I5', 'I7', 'Dual Core', 'Quad Core'];
+    var special_words = ['CPU', 'ULA', 'registradores', 'RAM', 'ROM', 'EPROM', 'FLASH', 'Memória de Massa', 'DMA', 'CS', 'Adress Bus', 'Data Bus', 'I5', 'I7', 'Dual Core', 'Quad Core'];
 
 var questions_list = [
-    'Qual é a sigla para Central Process Unit?',
-    'Um circuto digital que realiza operações lógicas e aritméticas. Qual é o nome deste componente?',
-    'Tipo de memória que se encontra no topo da hierarquia de memória',
-    'Tipo de memória volátil que tem como nome Random Acess Memory. Qual é a sigla deste componente?',
-    'Tipo de memória não volátil que oferece dados apenas para leitura',
-    'Tipo de memória não volátil que precisa ter seu chip exposto a luz ultravioleta para apagar seu conteúdo',
-    'Tipo particular de EEPROM que mantém as informações armazenadas sem a necessidade de uma fonte de energia elétrica',
-    'Tipo de memória que precisa ter seu conteúdo copiado na RAM para poder ser executado pela CPU',
-    'Permite que periféricos acessem diretamente a RAM sem ocupar processamento',
-    'Também conhecido como Slave Select (SS). Usado para selecionar um ou um conjunto de circuitos que estão conectados no computador',
-    'Grupo de linhas ou trilhas usadas para se referir a um endereço físico na memória. O número de trilhas determina a quantidade de endereços na memória física',
-    'Também chamado de Memory Bus. É responsável para carregar os dados.',
-    'Modelo de processador desenvolvido pela Intel qu teve sua primeira versão lançada em setembro de 2009',
-    'Modelo de processador desenvolvido pela Intel qu teve sua primeira versão lançada em novembro de 2008',    
-    'Tipo de processador que possui dois processadores ou melhor dizendo ‘dois centros, núcleos ou cores de execução‘ no mesmo circuito integrado.  Cada core tem sua própria memória cash e controlador o que permite que funcione mais efetivamente do que um processador single',
-    'Segue o mesmo princípio de um dual-core, mas agora em teoria tem o dobro da capacidade de processamento'
+    'Qual é a parte lógica do processador que executa instruções, cálculos e controla operações?(SIGLA)',
+    'Parte fundamental para o processamento de dados, localizada na CPU, executando operações matematicas e Logicas(SIGLA):',
+    'Qual o nome da pequena unidade de armazenamento temporario que se localizada na CPU?',
+    'Memoria volátil de alta velocidade, que armazena os dados apenas em quanto o computador se mantem ligado (SIGLA):',
+    'Qual é o tipo de memoria permanente de leitura, que armazena a BIOS?',
+    'Qual o tipo de memoria tipo ROM não volatil que pode ser apagada com o uso de luz Ultra-Violeta',
+    'Memoria não volatil que utiliza chips em estado solido, presentes em Cartões SD e Prendrives:',
+    'Memoria não volatil que armazena grande quantidade de dados a longo prazo, como CD e HD:',
+    'Qual recurso permite a conexão direta entre hardware e memória, melhorando o desempenho ao liberar a CPU?',
+    'Sinal que escolhe um chip específico para comunicação:',
+    'Conjunto de linhas no computador que transporta o endereço da memória ou dispositivo a ser acessado pelo processador:',
+    'Conjunto de linhas bidirecionais que transmite dados entre o processador, memória e dispositivos periféricos:',
+    'Processador Intel intermediário, ideal para diversas tarefas do dia a dia:',
+    'Intel de alto desempenho, indicado para tarefas mais exigentes:',    
+    'Tipo de processador com dois núcleos de processamento, que permite realizar duas tarefas simultaneamente.',
+    'Tipo de processador com quatro núcleos de processamento, ideal para multitarefas e maior desempenho que o dual core.'
 ];
 
 var filledCell = [2, 20, 38, 133, 134, 135, 59, 77, 95, 113, 131, 149,
